Rev. 3: shaderpack teardown, sixth speedtest, Terralith data-loss warning
Unpacking ComplementaryReimagined_r5.8.1 settles two open questions and
overturns a recommendation:

- Profile HIGH sets shadowDistance=192.0, which the pack's lang file labels
  "12 Chunks". The advice to lower it from Rev. 1/2 is already satisfied, so
  there is nothing to gain there. It also confirms that the D:26 in the Iris
  shadow line is render distance.
- The lang file contains zero strikethrough codes. What reads as greyed out
  and struck through is the pack's own warning styling: dark red, bold,
  underline, italic, and obfuscated dashes around the most expensive values.
  The options are editable, and they live under Performance Settings.
- The real lever is ENTITY_SHADOW=1, which HIGH enables and whose own author
  documents as costing more than 50% of fps in some cases — in a world the
  F3 shows holding 194 entities.

Two further corrections: only Lithium predates the recent additions, so the
F3 baseline no longer describes the current setup; and the reported jump from
50.3 to 55.17 Mbit/s was a comparison of available bitrate against raw sync
rate, not an improvement. The sixth speedtest confirms it — 50.42 Mbit/s at
18.7 ms bufferbloat is 92% of raw sync, i.e. the line is fully saturated.

Adds a data-loss warning for re-enabling Terralith (chunks loaded and saved
with the mod off can have their biomes written back as the fallback), a
hypothesis and bisect plan for the world that no longer loads, RAM sizing for
an 8 GB machine, the instance-duplication path and a full mod matrix for Paul,
whether Cobblemon needs Terralith, the difference between disabling
LambDynamicLights in game versus removing it, and a support letter to EWE.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01G2urzHDoBGxaho3xgBWmGe